--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <button class="btn button" style="color: white;"><span>View more </span></button>
          <button class="btn button" style="color: white;"><span>Booking </span></button>
       </div>
-      <video src="C:\Users\ASUS\Desktop\coding\images\pexels-koolshooters-6628458.mp4" muted loop autoplay width="100%" height="80%">
+      <video src="images\pexels-koolshooters-6628458.mp4" muted loop autoplay width="100%" height="80%">
     </div>
 
 
@@ -191,25 +191,25 @@
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
         
-          <img src="C:\Users\ASUS\Desktop\coding\images\photo-1531299244174-d247dd4e5a66.jfif" width="100%"  class="image">
+          <img src="images\photo-1531299244174-d247dd4e5a66.jfif" width="100%"  class="image">
           <div class="overlay">
             <div class="text-center">Hello</div>
         </div>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-        <img src="C:\Users\ASUS\Desktop\coding\images\photo-1570172619644-dfd03ed5d881.jfif"width="100%" class="image">
+        <img src="images\photo-1570172619644-dfd03ed5d881.jfif"width="100%" class="image">
         <div class="overlay">
           <div class="text-center">Hello</div>
       </div>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-        <img src="C:\Users\ASUS\Desktop\coding\images\photo-1600334129128-685c5582fd35.jfif"width="100%" class="image">
+        <img src="images\photo-1600334129128-685c5582fd35.jfif"width="100%" class="image">
         <div class="overlay">
           <div class="text-center">Hello</div>
       </div>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-        <img src="C:\Users\ASUS\Desktop\coding\images\photo-1519415510236-718bdfcd89c8.jfif" width="100%" class="image">
+        <img src="images\photo-1519415510236-718bdfcd89c8.jfif" width="100%" class="image">
         <div class="overlay">
           <div class="text-center">Hello</div>
       </div>
