--- a/Aboutusspa.html
+++ b/Aboutusspa.html
@@ -113,7 +113,7 @@
       style="background-color: DarkSeaGreen"
     >
       <!-- Brand/logo -->
-      <a class="navbar-brand" href="#" style="color: white" bold>SPA MLG</a>
+      <a class="navbar-brand" href="index.html" style="color: white" bold>SPA MLG</a>
       <!-- Links -->
 
       <ul class="navbar-nav ml-auto" style="padding-right: 30px">
@@ -148,7 +148,7 @@
             </div>
             <div class="col-6">
               <img
-                src="C:\Users\ASUS\Desktop\coding\images\photo-1600334129128-685c5582fd35.jfif"
+                src="images\photo-1600334129128-685c5582fd35.jfif"
                 width="100%"
                 height="600"
               />
@@ -161,7 +161,7 @@
         <div class="row">
           <div class="col">
             <img
-              src="C:\Users\ASUS\Desktop\coding\images\filipp-romanovski-J8L-twLd67c-unsplash.jpg"
+              src="images\filipp-romanovski-J8L-twLd67c-unsplash.jpg"
               width="100%"
               height="600"
             />
@@ -169,7 +169,7 @@
 
           <div class="col">
             <img
-              src="C:\Users\ASUS\Desktop\coding\images\karsten-winegeart-kWm6bXPJl4s-unsplash.jpg"
+              src="images\karsten-winegeart-kWm6bXPJl4s-unsplash.jpg"
               width="100%"
               height="600"
             />
