--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <nav class="navbar navbar-expand-sm navbar-light" style="background-color: DarkSeaGreen; ">
      <!-- Brand/logo -->
-      <a class="navbar-brand" href="#" style="color: white" bold >SPA MLG</a> 
+      <a class="navbar-brand" href="index.html" style="color: white" bold >SPA MLG</a> 
       <!-- Links -->
 
   <ul class="navbar-nav ml-auto" style="padding-right: 30px; ">    
