--- a/servicesspa.html
+++ b/servicesspa.html
@@ -188,7 +188,7 @@
       style="background-color: DarkSeaGreen"
     >
       <!-- Brand/logo -->
-      <a class="navbar-brand" href="#" style="color: white" bold>SPA MLG</a>
+      <a class="navbar-brand" href="index.html" style="color: white" bold>SPA MLG</a>
       <!-- Links -->
 
       <ul class="navbar-nav ml-auto" style="padding-right: 30px">
@@ -216,7 +216,7 @@
 
 <br><br>
 
-<img src="C:\Users\ASUS\Desktop\coding\images\raphael-lovaski-cJwl8182Mjs-unsplash.jpg" style="justify-content: center; width: 100%; height: 480px; object-fit: cover;">
+<img src="images\raphael-lovaski-cJwl8182Mjs-unsplash.jpg" style="justify-content: center; width: 100%; height: 480px; object-fit: cover;">
 
 
 <h3 style="padding-top: 80px; padding-bottom: 60px">Hands</h3>
