--- a/Aboutusspa.html
+++ b/Aboutusspa.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col-6">
               <img
-                src="images\photo-1600334129128-685c5582fd35.jfif"
+                src="images\photo-1600334129128-685c5582fd35.jpg"
                 width="100%"
                 height="600"
               />
