--- a/aboutusspa.html
+++ b/aboutusspa.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col-6">
               <img
-                src="images\da.jpg"
+                src="images\da.jfif"
                 width="100%"
                 height="600"
               />
