--- a/aboutusspa.html
+++ b/aboutusspa.html
@@ -161,7 +161,7 @@
         <div class="row">
           <div class="col">
             <img
-              src="images\filipp-romanovski-J8L-twLd67c-unsplash.jpg"
+              src="https://images.unsplash.com/photo-1626383151337-fe5c38ebe865?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80"
               width="100%"
               height="600"
             />
