--- a/aboutusspa.html
+++ b/aboutusspa.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col-6">
               <img
-                src="images\filipp-romanovski-J8L-twLd67c-unsplash.jpg"
+                src="https://images.unsplash.com/photo-1626375555954-5a06860e84a5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80"
                 width="100%"
                 height="600"
               />
